--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,13 +5,15 @@
     <title>Accueil</title>
   </head>
   <body>
-    <h1>Bienvenue sur la page d'accueil!!!!</h1>
-    <p>Va voir la réponse à la question de l'univers</p>
-    <p>
-      <a href="/users/secret" class="btn btn-primary">ICI</a>
+    <center>
+    <h1>Hey c'est nous les Users (Jean, Paul, Kwevan, Marc et Matthieu !!!!)</h1>
+    <br>
+      <iframe src="https://giphy.com/embed/l2Sq8kLGuf6iuzuFi" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/southparkgifs-l2Sq8kLGuf6iuzuFi">via GIPHY</a></p>
+    <br>
 
-    </p>
 
 
+
+  </center>
   </body>
 </html>
