--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Bienvenue sur la page d'Accueil!!</h1>
+    <br><br>
+    <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/xT8qB5wdOO58pkkd7q" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/coin-coin-band-xT8qB5wdOO58pkkd7q">via GIPHY</a></p>
+    <br>
+
+    <h2>T'es vraiment descendu aussi bas???</h2>
+    <h3>Le boulot est plus haut en fait. Inscris toi plutôt ;)</h3>
 
   </body>
 </html>
