--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,9 @@
     <title>42</title>
   </head>
   <body>
+    <br><br><br>
     <h1>42</h1>
+    <br><br>
+    <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/1JmzUXJRMwIOk" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/bandai-1JmzUXJRMwIOk">via GIPHY</a></p>
   </body>
 </html>
